finalisation du check sur les menus restos et ajout de la class text

--- a/menus-restaurants/menu_la_palette_du_gout.html
+++ b/menus-restaurants/menu_la_palette_du_gout.html
@@ -40,7 +40,7 @@
                                 <div class="card-content">
                                     <h4 class="card-title">Fricassée d'escargots</h4>
                                     <div class="menu-card-text">
-                                        <span>Au piment d'Espelette</span>
+                                        <span class="text">Au piment d'Espelette</span>
                                         <span class="price">25€</span>
                                     </div>
                                 </div>
@@ -52,7 +52,7 @@
                                 <div class="card-content">
                                     <h4 class="card-title">Foie gras de canard mi-cuit</h4>
                                     <div class="menu-card-text">
-                                        <span>Et ses copeaux de truffe noire</span>
+                                        <span class="text">Et ses copeaux de truffe noire</span>
                                         <span class="price">35€</span>
                                     </div>
                                 </div>
@@ -64,7 +64,7 @@
                                 <div class="card-content">
                                     <h4 class="card-title">Oeuf au plat</h4>
                                     <div class="menu-card-text">
-                                        <span>Assaisonné à la truffe sur lit de caviar</span>
+                                        <span class="text">Assaisonné à la truffe sur lit de caviar</span>
                                         <span class="price">20€</span>
                                     </div>
                                 </div>
@@ -81,7 +81,7 @@
                                 <div class="card-content">
                                     <h4 class="card-title">Filet de boeuf aux herbes</h4>
                                     <div class="menu-card-text">
-                                        <span>Accompagné de sa ribambelle de légumes</span>
+                                        <span class="text">Accompagné de sa ribambelle de légumes</span>
                                         <span class="price">40€</span>
                                     </div>
                                 </div>
@@ -93,7 +93,7 @@
                                 <div class="card-content">
                                     <h4 class="card-title">Parmentier de queue de boeuf</h4>
                                     <div class="menu-card-text">
-                                        <span>À la truffe noire sur sa purée de panais</span>
+                                        <span class="text">À la truffe noire sur sa purée de panais</span>
                                         <span class="price">35€</span>
                                     </div>
                                 </div>
@@ -105,7 +105,7 @@
                                 <div class="card-content">
                                     <h4 class="card-title">Filet de turbot</h4>
                                     <div class="menu-card-text">
-                                        <span>Aux agrumes</span>
+                                        <span class="text">Aux agrumes</span>
                                         <span class="price">44€</span>
                                     </div>
                                 </div>
@@ -122,7 +122,7 @@
                                 <div class="card-content">
                                     <h4 class="card-title">Paris-Brest</h4>
                                     <div class="menu-card-text">
-                                        <span>Revisité</span>
+                                        <span class="text">Revisité</span>
                                         <span class="price">18€</span>
                                     </div>
                                 </div>
@@ -134,7 +134,7 @@
                                 <div class="card-content">
                                     <h4 class="card-title">Macaron au chocolat d'exception</h4>
                                     <div class="menu-card-text">
-                                        <span>Et glace à la vanille de Madagascar</span>
+                                        <span class="text">Et glace à la vanille de Madagascar</span>
                                         <span class="price">22€</span>
                                     </div>
                                 </div>
@@ -146,7 +146,7 @@
                                 <div class="card-content">
                                     <h4 class="card-title">Mousse au chocolat</h4>
                                     <div class="menu-card-text">
-                                        <span>Au piment d'Espelette et à la truffe noire</span>
+                                        <span class="text">Au piment d'Espelette et à la truffe noire</span>
                                         <span class="price">23€</span>
                                     </div>
                                 </div>
