--- a/menus-restaurants/menu_le_delice_des_sens.html
+++ b/menus-restaurants/menu_le_delice_des_sens.html
@@ -40,7 +40,7 @@
                                 <div class="card-content">
                                     <h4 class="card-title">Tartare de thon</h4>
                                     <div class="menu-card-text">
-                                        <span>Assaisonné au yuzu</span>
+                                        <span class="text">Assaisonné au yuzu</span>
                                         <span class="price">25€</span>
                                     </div>
                                 </div>
@@ -52,7 +52,7 @@
                                 <div class="card-content">
                                     <h4 class="card-title">Bouchée de homard croustillant</h4>
                                     <div class="menu-card-text">
-                                        <span>Et sa farandole de petits légumes</span>
+                                        <span class="text">Et sa farandole de petits légumes</span>
                                         <span class="price">35€</span>
                                     </div>
                                 </div>
@@ -64,7 +64,7 @@
                                 <div class="card-content">
                                     <h4 class="card-title">Velouté de cèpes</h4>
                                     <div class="menu-card-text">
-                                        <span>Aux truffes</span>
+                                        <span class="text">Aux truffes</span>
                                         <span class="price">20€</span>
                                     </div>
                                 </div>
@@ -81,7 +81,7 @@
                                 <div class="card-content">
                                     <h4 class="card-title">Poulet rôti aux herbes de Provence</h4>
                                     <div class="menu-card-text">
-                                        <span>Et sa crème de truffe</span>
+                                        <span class="text">Et sa crème de truffe</span>
                                         <span class="price">40€</span>
                                     </div>
                                 </div>
@@ -93,7 +93,7 @@
                                 <div class="card-content">
                                     <h4 class="card-title">Langouste rôtie</h4>
                                     <div class="menu-card-text">
-                                        <span>Et ses légumes de saison</span>
+                                        <span class="text">Et ses légumes de saison</span>
                                         <span class="price">35€</span>
                                     </div>
                                 </div>
@@ -105,7 +105,7 @@
                                 <div class="card-content">
                                     <h4 class="card-title">Côte de boeuf Angus</h4>
                                     <div class="menu-card-text">
-                                        <span>Et sa purée de panais</span>
+                                        <span class="text">Et sa purée de panais</span>
                                         <span class="price">44€</span>
                                     </div>
                                 </div>
@@ -122,7 +122,7 @@
                                 <div class="card-content">
                                     <h4 class="card-title">Farandole de desserts</h4>
                                     <div class="menu-card-text">
-                                        <span>Du chef</span>
+                                        <span class="text">Du chef</span>
                                         <span class="price">18€</span>
                                     </div>
                                 </div>
@@ -134,7 +134,7 @@
                                 <div class="card-content">
                                     <h4 class="card-title">Crème brulée</h4>
                                     <div class="menu-card-text">
-                                        <span>Revisitée</span>
+                                        <span class="text">Revisitée</span>
                                         <span class="price">22€</span>
                                     </div>
                                 </div>
@@ -146,7 +146,7 @@
                                 <div class="card-content">
                                     <h4 class="card-title">Tiramisu</h4>
                                     <div class="menu-card-text">
-                                        <span>À la noisette</span>
+                                        <span class="text">À la noisette</span>
                                         <span class="price">23€</span>
                                     </div>
                                 </div>
