--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
                                         <p class="card-subtitle">Charonne</p>
                                     </div>
                                     <div class="heart">
-                                        <i class="fa-regular fa-heart fa-xl"></i>
-                                        <i class="fa-solid fa-heart fa-xl"></i>
+                                        <i class="fa-regular fa-heart fa-xl heart-empty"></i>
+                                        <i class="fa-solid fa-heart fa-xl heart-full"></i>
                                     </div>
                                 </div>
                             </a>
@@ -100,8 +100,8 @@
                                         <p class="card-subtitle">Cité rouge</p>
                                     </div>
                                     <div class="heart">
-                                        <i class="fa-regular fa-heart fa-xl"></i>
-                                        <i class="fa-solid fa-heart fa-xl"></i>
+                                        <i class="fa-regular fa-heart fa-xl heart-empty"></i>
+                                        <i class="fa-solid fa-heart fa-xl heart-full"></i>
                                     </div>
                                 </div>
                             </a>
@@ -116,8 +116,8 @@
                                         <p class="card-subtitle">Folie-Méricourt</p>
                                     </div>
                                     <div class="heart">
-                                        <i class="fa-regular fa-heart fa-xl"></i>
-                                        <i class="fa-solid fa-heart fa-xl"></i>
+                                        <i class="fa-regular fa-heart fa-xl heart-empty"></i>
+                                        <i class="fa-solid fa-heart fa-xl heart-full"></i>
                                     </div>
                                 </div>
                             </a>
