--- a/menus-restaurants/menu_a_la_francaise.html
+++ b/menus-restaurants/menu_a_la_francaise.html
@@ -40,7 +40,7 @@
                                 <div class="card-content">
                                     <h4 class="card-title">Tartare de poulpe acidulé</h4>
                                     <div class="menu-card-text">
-                                        <span>Aux zestes d'orange</span>
+                                        <span class="text">Aux zestes d'orange</span>
                                         <span class="price">25€</span>
                                     </div>
                                 </div>
@@ -52,7 +52,7 @@
                                 <div class="card-content">
                                     <h4 class="card-title">Velouté de légumes d'antan</h4>
                                     <div class="menu-card-text">
-                                        <span>Carotte, panais, topinambour</span>
+                                        <span class="text">Carotte, panais, topinambour</span>
                                         <span class="price">35€</span>
                                     </div>
                                 </div>
@@ -64,7 +64,7 @@
                                 <div class="card-content">
                                     <h4 class="card-title">Soupe à l'oignon</h4>
                                     <div class="menu-card-text">
-                                        <span>Revisitée</span>
+                                        <span class="text">Revisitée</span>
                                         <span class="price">20€</span>
                                     </div>
                                 </div>
@@ -81,7 +81,7 @@
                                 <div class="card-content">
                                     <h4 class="card-title">Coquilles Saint-Jacques</h4>
                                     <div class="menu-card-text">
-                                        <span>Accompagnées d'une purée de panais</span>
+                                        <span class="text">Accompagnées d'une purée de panais</span>
                                         <span class="price">40€</span>
                                     </div>
                                 </div>
@@ -93,7 +93,7 @@
                                 <div class="card-content">
                                     <h4 class="card-title">Magret de canard</h4>
                                     <div class="menu-card-text">
-                                        <span>Et parmentier de pommes de terre</span>
+                                        <span class="text">Et parmentier de pommes de terre</span>
                                         <span class="price">35€</span>
                                     </div>
                                 </div>
@@ -105,7 +105,7 @@
                                 <div class="card-content">
                                     <h4 class="card-title">Pigeonneau d'Ille-et-Vilaine</h4>
                                     <div class="menu-card-text">
-                                        <span>Sur son lit de gnocchis aux légumes</span>
+                                        <span class="text">Sur son lit de gnocchis aux légumes</span>
                                         <span class="price">44€</span>
                                     </div>
                                 </div>
@@ -122,7 +122,7 @@
                                 <div class="card-content">
                                     <h4 class="card-title">Pétales de violettes glacés</h4>
                                     <div class="menu-card-text">
-                                        <span>Et purée de noisettes</span>
+                                        <span class="text">Et purée de noisettes</span>
                                         <span class="price">18€</span>
                                     </div>
                                 </div>
@@ -134,7 +134,7 @@
                                 <div class="card-content">
                                     <h4 class="card-title">Fondant au chocolat</h4>
                                     <div class="menu-card-text">
-                                        <span>Revisité</span>
+                                        <span class="text">Revisité</span>
                                         <span class="price">22€</span>
                                     </div>
                                 </div>
@@ -146,7 +146,7 @@
                                 <div class="card-content">
                                     <h4 class="card-title">Millefeuille croustillant</h4>
                                     <div class="menu-card-text">
-                                        <span>Myrtilles et pâte d'amande</span>
+                                        <span class="text">Myrtilles et pâte d'amande</span>
                                         <span class="price">23€</span>
                                     </div>
                                 </div>
