--- a/menus-restaurants/menu_la_note_enchantee.html
+++ b/menus-restaurants/menu_la_note_enchantee.html
@@ -40,7 +40,7 @@
                                 <div class="card-content">
                                     <h4 class="card-title">Ravioles de foie gras</h4>
                                     <div class="menu-card-text">
-                                        <span>Accompagnées de leur crème à la truffe</span>
+                                        <span class="text">Accompagnées de leur crème à la truffe</span>
                                         <span class="price">25€</span>
                                     </div>
                                 </div>
@@ -52,7 +52,7 @@
                                 <div class="card-content">
                                     <h4 class="card-title">Caviar osciètre</h4>
                                     <div class="menu-card-text">
-                                        <span>Sur blini à la farine de blé noir</span>
+                                        <span class="text">Sur blini à la farine de blé noir</span>
                                         <span class="price">35€</span>
                                     </div>
                                 </div>
@@ -64,7 +64,7 @@
                                 <div class="card-content">
                                     <h4 class="card-title">Homard et espuma de potiron</h4>
                                     <div class="menu-card-text">
-                                        <span>Marinés aux zestes d'orange</span>
+                                        <span class="text">Marinés aux zestes d'orange</span>
                                         <span class="price">20€</span>
                                     </div>
                                 </div>
@@ -76,7 +76,7 @@
                                 <div class="card-content">
                                     <h4 class="card-title">Foie gras de canard cuit entier</h4>
                                     <div class="menu-card-text">
-                                        <span>Confiture de figue et pain toasté</span>
+                                        <span class="text">Confiture de figue et pain toasté</span>
                                         <span class="price">35€</span>
                                     </div>
                                 </div>
@@ -93,7 +93,7 @@
                                 <div class="card-content">
                                     <h4 class="card-title">Noix de coquilles Saint-Jacques</h4>
                                     <div class="menu-card-text">
-                                        <span>Sur lit de purée de céleri-rave</span>
+                                        <span class="text">Sur lit de purée de céleri-rave</span>
                                         <span class="price">40€</span>
                                     </div>
                                 </div>
@@ -105,7 +105,7 @@
                                 <div class="card-content">
                                     <h4 class="card-title">Langoustine poêlée</h4>
                                     <div class="menu-card-text">
-                                        <span>Purée de patate douce</span>
+                                        <span class="text">Purée de patate douce</span>
                                         <span class="price">35€</span>
                                     </div>
                                 </div>
@@ -117,7 +117,7 @@
                                 <div class="card-content">
                                     <h4 class="card-title">Mijoté de queue de boeuf</h4>
                                     <div class="menu-card-text">
-                                        <span>Et riz sauvage aux zestes de citron</span>
+                                        <span class="text">Et riz sauvage aux zestes de citron</span>
                                         <span class="price">44€</span>
                                     </div>
                                 </div>
@@ -134,7 +134,7 @@
                                 <div class="card-content">
                                     <h4 class="card-title">Macaron noisette et chocolat</h4>
                                     <div class="menu-card-text">
-                                        <span>Glace au caramel brun et sel de Guérande</span>
+                                        <span class="text">Glace au caramel brun et sel de Guérande</span>
                                         <span class="price">18€</span>
                                     </div>
                                 </div>
@@ -146,7 +146,7 @@
                                 <div class="card-content">
                                     <h4 class="card-title">Baba au rhum revisité</h4>
                                     <div class="menu-card-text">
-                                        <span>Avec son coulis de citron</span>
+                                        <span class="text">Avec son coulis de citron</span>
                                         <span class="price">22€</span>
                                     </div>
                                 </div>
@@ -158,7 +158,7 @@
                                 <div class="card-content">
                                     <h4 class="card-title">Tarte au citron meringuée</h4>
                                     <div class="menu-card-text">
-                                        <span>Déstructurée</span>
+                                        <span class="text">Déstructurée</span>
                                         <span class="price">23€</span>
                                     </div>
                                 </div>
