Animation des coeurs sur les menus restaurants + ajout de padding sur les classes card-title et text

--- a/menus-restaurants/menu_le_delice_des_sens.html
+++ b/menus-restaurants/menu_le_delice_des_sens.html
@@ -28,8 +28,8 @@
                 <div class="menu-title">
                     <h2>Le délice des sens</h2>
                     <div class="menu-heart">
-                        <i class="fa-regular fa-heart fa-xl"></i>
-                        <i class="fa-solid fa-heart fa-xl"></i>
+                        <i class="fa-regular fa-heart fa-xl heart-empty"></i>
+                        <i class="fa-solid fa-heart fa-xl heart-full"></i>
                     </div>
                 </div>
                 <div class="formule">
